--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "bcrypt": "^3.0.2",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
     "chai-json": "^1.0.0",
+    "config": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "joi": "^14.0.2",
+    "joi-date-extensions": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
     "mocha": "^5.2.0",
     "node-static": "^0.7.11",
-    "pg": "^7.5.0",
+    "pg": "^7.6.0",
+    "pg-promise": "^8.5.1",
     "supertest": "^3.3.0"
   },
   "devDependencies": {
@@ -38,14 +43,16 @@
     "rimraf": "^2.6.2"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --exit",
+    "test": "mocha --compilers js:babel-core/register src/test/ --exit ",
     "cover": "node_modules/.bin/nyc --require babel-core/register node_modules/.bin/mocha \\ test/test.js --exit",
     "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel ./src --out-dir ./build",
     "build": "npm run clean && npm run build-babel",
     "dev": "nodemon --exec babel-node src/index.js --env",
-    "start": "npm run build && node ./build/index.js"
+    "devdb": "nodemon --exec babel-node src/routes/dbparams.js --env",
+    "start": "npm run build && node ./build/index.js",
+    "dbscript": "psql -U postgres -f ./dbscript/CreateDb.sql"
   },
   "repository": {
     "type": "git",
