--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "bcrypt": "^3.0.2",
+    "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
     "chai-json": "^1.0.0",
