--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-PORT=8080
+PORT=5000
 PGHOST='localhost'
-PGDATABASE='postgres'
-PGPASSWORD=null
+PGDATABASE='store_manager'
+PGPASSWORD='mar889003'
 PGPORT=5432
+SECRETKEY= 'privateKey'
+PGUSER = 'postgres'
