--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "store-manager2",
+  "name": "store-manager",
   "version": "1.0.0",
   "description": "[![Build Status](https://travis-ci.com/otaigbe/store-manager.svg?branch=master)](https://travis-ci.com/otaigbe/store-manager)",
   "main": "index.js",
@@ -26,9 +26,7 @@
     "mocha": "^5.2.0",
     "node-static": "^0.7.11",
     "pg": "^7.6.0",
-    "supertest": "^3.3.0"
-  },
-  "devDependencies": {
+    "supertest": "^3.3.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -41,6 +39,9 @@
     "nodemon": "^1.18.4",
     "nyc": "^13.1.0",
     "rimraf": "^2.6.2"
+  },
+  "devDependencies": {
+    
   },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register src/test/ --exit ",
