--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ node_js:
     - "10"
 services:
   - postgresql
+  script:
+  - echo pwd
 before_script:
   - psql -c 'create database store_manager;' -U postgres
   - psql -c "CREATE USER postgrestravis WITH PASSWORD 'mar889003';" -U postgres
