--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 services:
   - postgresql
   script:
-  - echo pwd
+  - npm test
 before_script:
   - psql -c 'create database store_manager;' -U postgres
   - psql -c "CREATE USER postgrestravis WITH PASSWORD 'mar889003';" -U postgres
