--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ node_js:
 services:
   - postgresql
 before_script:
-  - psql -U postgres -a -f dbscripts/CreateDb.sql
+  - psql -U postgres -a -f dbscripts/DB.sql
 after_success: npm run coverage
