--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "rimraf": "^2.6.2"
   },
   "scripts": {
-    "test": "psql -U postgres -a -f dbscripts/CreateDb.sql && cross-env NODE_ENV=test nyc _mocha --recursive src/test/version1/  --timeout 10000 --exit",
+    "test": "psql -U postgres -a -f dbscripts/createDb.sql && cross-env NODE_ENV=test nyc _mocha --recursive src/test/version1/  --timeout 10000 --exit",
     "cover": "nyc --reporter=lcov npm test",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel ./src --out-dir ./build",
@@ -56,8 +56,8 @@
     "dev": "nodemon --exec babel-node src/index.js --env",
     "devdb": "nodemon --exec babel-node src/routes/dbparams.js --env",
     "start": "npm run build && node ./build/index.js",
-    "dbscript": "psql -U postgres -f ./src/dbUtils/dbscripts/CreateDb.sql",
-    "tables-setup-heroku": "heroku pg:psql -f  ./dbscripts/CreateDbHeroku.sql",
+    "dbscript": "psql -U postgres -f ./src/dbUtils/dbscripts/createDb.sql",
+    "tables-setup-heroku": "heroku pg:psql -f  ./dbscripts/createDbHeroku.sql",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
