--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: node_js
 node_js:
-    - "10"
+  - "10"
 services:
   - postgresql
-env:
- - PGUSER = postgres
- - PGDATABASE = store_manager
- - PGPORT = 5432
- - PGPASSWORD= password
- - PORT = 5500
- - JWTKEY = secretKey
+before_script:
+  - psql -c 'create database store_manager;' -U postgres
+  - psql -U postgres -a -f dbscripts/travis.sql
+script:
+  - npm run travistest
 after_success: npm run coverage
