--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "dbscript": "psql -U postgres -f ./src/dbUtils/dbscripts/createDb.sql",
     "tables-setup-heroku": "heroku pg:psql -f  ./dbscripts/createDbHeroku.sql",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "travistest": "cross-env NODE_ENV=test nyc _mocha --recursive src/test/version1/  --timeout 10000 --exit"
+    "travistest": "nyc _mocha --recursive src/test/version1/  --timeout 10000 --exit"
 
   },
   "repository": {
