adding code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 env:
+  global:
   - PGDATABASE=store_manager
   - PGUSER=postgres
   - JWTKEY='secretKey'
+  - PGPORT=5432
+  - PGHOST=localhost
 node_js:
   - "10"
 services:
