--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ before_script:
   - psql -c 'create database store_manager;' -U postgres
 script:
   - npm run travistest
+after_script:
+  - psql -c 'select * from products;' -U postgres
