--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 env:
   - PGDATABASE=store_manager
   - PGUSER=postgres
-  - JWTKEY='secretKey'
+  - JWTKEY=secretKey
 node_js:
   - "10"
 services:
