--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ env:
   - PGDATABASE=store_manager
   - PGUSER=postgres
   - JWTKEY='secretKey'
+  - PGPASSWORD=password
 node_js:
   - "10"
 services:
   - postgresql
 before_script:
   - psql -c 'create database store_manager;' -U postgres
+  - psql -c "CREATE USER postgres WITH PASSWORD 'password';" -U postgres
 script:
   - npm run travistest
 after_script:
