--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ node_js:
 services:
   - postgresql
 before_script:
-  - psql -c 'show databases;' -U postgres
+  - psql -c 'DROP DATABASE IF EXISTS store_manager;' -U postgres
   - psql -c 'create database store_manager;' -U postgres
   - psql -c "CREATE USER otaigbe WITH PASSWORD 'password';" -U postgres
 script:
