--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
+    "chai-expected-cookie": "^1.0.2",
     "chai-http": "^4.2.0",
     "chai-json": "^1.0.0",
     "chai-url": "^1.0.4",
