--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,5 @@ env:
   - PGUSER=postgres
   - PGHOST=localhost
 script:
-  - npm run travistest
-after_script:
-  - npm run confirm
+  - npm run test
+after_success: npm run coverage
