--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ env:
   - PGHOST=localhost
 script:
   - npm run test
-after_success: npm run coverage
+after_success:
+  - nyc report --reporter=text-lcov | coveralls
