--- a/package.json
+++ b/package.json
@@ -4,12 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "babel-istanbul": "^0.12.2",
-    "babel-plugin-istanbul": "^5.1.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
@@ -38,20 +33,20 @@
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.5",
     "@babel/register": "^7.0.0",
+    "babel-plugin-istanbul": "^5.1.0",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "istanbul": "^0.4.5",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.6",
     "nyc": "^13.1.0",
     "rimraf": "^2.6.2"
   },
   "scripts": {
-    "confirm": "babel-node ./src/dbUtils/confirmInsertion.js --env",
     "migrations": "babel-node ./src/dbUtils/autoCreateTables.js --env",
-    "test": "npm run migrations && cross-env NODE_ENV=test nyc _mocha --recursive src/test/version1/  --timeout 25000 --exit",
+    "test": "npm run migrations && cross-env NODE_ENV=test nyc --reporter=text --reporter=html mocha --recursive src/test/version1/ --timeout 25000 --exit",
     "cover": "nyc --reporter=lcov npm test",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel ./src --out-dir ./build",
