--- a/package.json
+++ b/package.json
@@ -46,15 +46,12 @@
   },
   "scripts": {
     "migrations": "babel-node ./src/dbUtils/autoCreateTables.js --env",
-    "test": "npm run migrations && cross-env NODE_ENV=test nyc --reporter=text --reporter=html mocha --recursive src/test/version1/ --timeout 25000 --exit",
-    "cover": "nyc --reporter=lcov npm test",
+    "test": "npm run migrations && nyc mocha --recursive src/test/version1/ --timeout 25000 --exit --require @babel/register",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel ./src --out-dir ./build",
     "build": "npm run clean && npm run build-babel",
     "dev": "nodemon --exec babel-node src/index.js --env",
-    "devdb": "nodemon --exec babel-node src/routes/dbparams.js --env",
     "start": "npm run build && node ./build/index.js",
-    "dbscript": "psql -U postgres -f ./src/dbUtils/dbscripts/createDb.sql",
     "tables-setup-heroku": "heroku pg:psql -f  ./dbscripts/createDbHeroku.sql",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
