--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
   },
   "scripts": {
     "migrations": "babel-node ./src/dbUtils/autoCreateTables.js --env",
-    "test": "npm run migrations && nyc mocha --recursive src/test/version1/ --timeout 25000 --exit --require @babel/register",
+    "test": "npm run migrations && nyc mocha --recursive src/test/version1/ --timeout 25000 --exit",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel ./src --out-dir ./build",
     "build": "npm run clean && npm run build-babel",
     "dev": "nodemon --exec babel-node src/index.js --env",
     "start": "npm run build && node ./build/index.js",
-    "tables-setup-heroku": "heroku pg:psql -f  ./dbscripts/createDbHeroku.sql",
+    "tables-setup-heroku": "heroku pg:psql -f ./dbscripts/createDbHeroku.sql",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
