--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "dev": "nodemon --exec babel-node src/index.js --env",
     "start": "npm run build && node ./build/index.js",
     "tables-setup-heroku": "heroku pg:psql -f ./dbscripts/createDbHeroku.sql",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=html | coveralls"
   },
   "repository": {
     "type": "git",
